--- a/Socios.html
+++ b/Socios.html
@@ -18,7 +18,7 @@
     <header>
       <div class="contenedor">
         <a class="logo" href="index.html"> <img src="Imagenes/icono_blanco_azul.png"></a>
-        <a href="Index.html" style="color: #fff"><h1> Oviedo MadBulls </h1></a>
+        <a href="index.html" style="color: #fff"><h1> Oviedo MadBulls </h1></a>
         <input type ="checkbox" id ="menu-bar">
         <label class="icon-menu-1" for ="menu-bar"></label>
         <nav class="menu">
