Tercer commit, Avance con los formularios(contacto)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="Imagenes/Fondo-Mad.jpg" alt="banner">
         <div class="contenedor">
           <h2>Club de football de oviedo</h2>
-          <p>Da igual tu edad</p>
+          <p>Primer club de FootBall americano de la ciudad de Oviedo...</p>
           <a href="#">Leer Más</a>
         </div>
       </section>
