Añado calendario incompleto

--- a/Calendario.html
+++ b/Calendario.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Oviedo MadBulls CFA</title>
+    <title>Calendario-Oviedo MadBulls CFA</title>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="Estilos/Banner.css">
     <link rel="stylesheet" href="Estilos/Calendario.css">
     <link rel="stylesheet" href="Estilos/Eventos.css">
+    <link rel="stylesheet" href="Estilos/Calendario-pag.css">
   </head>
   <body>
     <header>
@@ -32,37 +33,48 @@
 
     <main>
       <section id="banner">
-        <img src="Imagenes/Fondo-Mad.jpg" alt="banner">
+        <img src="Imagenes/Banner-Calendario.png" alt="banner">
         <div class="contenedor">
-          <h2>Club de football de oviedo</h2>
-          <p>Primer club de FootBall americano de la ciudad de Oviedo...</p>
-          <a href="#">Leer Más</a>
+          <h2>Calendario de Partidos</h2>
+          
+          
         </div>
       </section>
       <section id="bienvenidos">
-        <h2>BIENVENIDOS A NUESTRO CLUB</h2>
-        <p>En esta sección puedes ver los últimos eventos de nuestro club, así como
-          algunos highlights de los partidos 
-
+        <h2>BIENVENIDOS A LA SECCIÓN DE CALENDARIO</h2>
+        <p>Aquí podreis encontrar las fechas, horarios y localizaciones de los partidos de 
+          la Liga Norte 7x7, además por si os los habeís perdido teneis las crónicas 
+          a vuestra disposición.
         </p>
       </section>
 
       <section id="calendario">
-        <h2>EVENTOS</h2>
+        <h2>PARTIDOS</h2>
         <div class="contenedor">
           <article>
-            <iframe width="351px" height="284px" src="https://www.youtube.com/embed/dvJZsk6lCtI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h4>King´s Bowl</h4>
+              <div class="VS"><h3 >Torrelavega Berserkers</h3>
+              <h3 > Vs</h3>
+              <h3 > Oviedo MadBulls</h3></div>
+            <img src="Imagenes/Plantilla-partido(1).png">
+            <div class="resultado"><h4>RESULTADO:13-22</h4> </div>
+
           </article>
 
           <article>
-            <iframe width="351px" height="284px" src="https://www.youtube.com/embed/RqZzpXbIoAQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <h4>Final AstuBowl Vs Milicia Flag</h4>
+              <div class="VS">
+                <h3 >Oviedo MadBulls</h3>
+                <h3 > Vs</h3>
+                <h3 > Vigo Guardians</h3></div>
+              <img src="Imagenes/Plantilla-partido(1).png">
+              <div class="resultado"><h4>RESULTADO:44-06</h4></div>
           </article>
 
           <article>
-            <img src="Imagenes/Plantilla-partido(1).png" alt="Partido3">
-            <h4>Partido 3</h4>
+              <div class="VS"><h3 >Venta de Baños White Sharks</h3>
+                <h3 > Vs</h3>
+                <h3 > Oviedo MadBulls</h3></div>
+                <img src="Imagenes/Plantilla-partido(1).png">
+                <div class="resultado"><h4>Fecha: 09-02-2019</h4></div>
           </article>
 
         </div>
