--- a/Equipo.html
+++ b/Equipo.html
@@ -25,7 +25,7 @@
         <nav class="menu">
           <a href="index.html">Inicio</a>
           <a href="Equipo.html">Equipo</a>
-          <a href="">Calendario</a>
+          <a href="Calendario.html">Calendario</a>
           <a href="Socios.html">Socios</a>
            </nav>
 
